simple-energy-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-energy-test-service
  namespace: test-temp 
spec:
  type: ClusterIP
  selector:
    app: simple-energy-app
  ports:
  - port: 80
    targetPort: 5000
